@@ -1,7 +1,8 @@
 v1.13.1-snapshot
 ===========
 Bug fixes:
-- #6900 Remaining SonarCloud reported bug items (test fixed)
+- #6900 Remaining SonarCloud reported bug items
+- #6903 Save global settings
 - #6889 Systray Icon on Ubuntu Auto Start (take 2)
 
 Enhancements:
